# ml-perusteet-code

./: .gitignore  OPE-OHJEET.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  tester.Dockerfile
data/bike_or_car/: 100_test.jsonl  16_row_sample.jsonl  293_train.jsonl
data/clustering/: 100x3_blobs.csv
src/ml/: decision_tree.py  gradient_descent.py  hill_climb.py  k_means.py  k_nearest.py  kissa.py  naive_bayes.py  random_forest.py  vector.py
src/ml/utils/: math.py  stats.py
src/playground/: how_to.ipynb  yskills_dataprep.ipynb
src/scripts/: download_datasets.py
tests/: test_bayes.py  test_config.py  test_decision_tree.py  test_dummy.py  test_gradient_descent.py  test_hillclimb.py  test_introduction.py  test_k_means.py  test_k_nearest.py  test_math.py  test_nonexistent.py  test_random_forest.py  test_vector.py
