[project]
name = "ml"
version = "0.1.0"
description = "Machine learning tools implemented in Python... from scratch!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml"]

[dependency-groups]
dev = [
    "allure-pytest>=2.14.1",
    "pytest>=8.3.5",
]

# Avoid including the dev dependencies in the default group
[tool.uv]
default-groups = []

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]